package triptop.groepB4.strategy;

public class CircuitBreakerStrategy implements ServiceStrategy {
    public void execute() {
        // TODO implement here
    }
}
