package triptop.groepB4.strategy;

public class FallbackStrategy implements ServiceStrategy {
    public void execute() {
        // TODO implement here
    }
}
