package triptop.groepB4.strategy;

public class RetryStrategy implements ServiceStrategy {
    public void execute() {
        // TODO implement here
    }
}
