package triptop.groepB4.strategy;

public interface ServiceStrategy {
    public void execute();
}
