@startuml
!include https://raw.githubusercontent.com/plantuml-stdlib/C4-PlantUML/master/C4_Component.puml

interface ServiceStrategy {
    + void execute();
}

class RetryStrategy {
    + void execute();
}

class CircuitBreakerStrategy {
    + void execute();
}

class FallbackStrategy {
    + void execute();
}

class AirScraperService {
    - ServiceStrategy strategy
    + void haalVluchtenOp()
    + void setStrategy(ServiceStrategy strategy)
    + void executeStrategy()
}

AirScraperService --> ServiceStrategy : maakt gebruik van
RetryStrategy --|> ServiceStrategy
CircuitBreakerStrategy --|> ServiceStrategy
FallbackStrategy --|> ServiceStrategy
@enduml